ingress-controller/traefik/traefik.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik
  namespace: kube-system
  labels:
    run: ingress-controller
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      hostNetwork: true
      priorityClassName: system-node-critical
      # use toleration if a taint is set on the worker nodes
      #tolerations:
      #- key: node-role.kubernetes.io/infra
      #  effect: NoSchedule
      containers:
      - image: traefik:1.7.11-alpine
        name: traefik
        resources:
          requests:
            cpu: "100m"
            memory: "50Mi"
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        volumeMounts:
        - name: config
          mountPath: /opt/config
          readOnly: true
        - name: certs
          mountPath: /opt/certs
          readOnly: true
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        - --configFile=/opt/config/traefik.toml
        - --kubernetes
      volumes:
      - name: config
        configMap:
          name: traefik-config
      - name: certs
        secret:
          secretName: noverit-tls
